[metadata]
name = cardano-mass-payments
version = 0.1.5
author = ADAPlus
author_email = hello@adaplus.io
description = A tool for handling mass payments for Cardano (ADA)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/adaplus/cardano-mass-payments
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Office/Business :: Financial :: Accounting
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.7
install_requires =
    pycardano==0.7.0

[options.entry_points]
console_scripts =
    cardano-mass-payments-generate = cardano_mass_payments.commands.mass_payments:main

[flake8]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv

[pycodestyle]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv

[isort]
line_length = 88
known_first_party = cardano_mass_payments,tests
multi_line_output = 3
default_section = THIRDPARTY
skip = venv/
skip_glob = **/migrations/*.py
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[mypy]
python_version = 3.9
check_untyped_defs = True
ignore_missing_imports = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True

[coverage:run]
include = cardano_mass_payments/*
omit = *migrations*, *tests*
